// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch in Dark Theme renders CustomBg 1`] = `
Array [
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-chiChi"
    id="headlessui-switch-:rg:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-roshi"
    id="headlessui-switch-:rh:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
]
`;

exports[`Switch in Dark Theme renders Default 1`] = `
<button
  aria-checked={true}
  className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
  data-tests="test-id"
  id="headlessui-switch-:rc:"
  onClick={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  role="switch"
  tabIndex={0}
  type="button"
>
  <span
    className="block relative"
  >
    <span
      aria-hidden="true"
      className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
    />
  </span>
</button>
`;

exports[`Switch in Dark Theme renders Disabled 1`] = `
Array [
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo opacity-30 cursor-not-allowed select-none"
    disabled={true}
    id="headlessui-switch-:rj:"
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={false}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-beerus opacity-30 cursor-not-allowed select-none"
    disabled={true}
    id="headlessui-switch-:rk:"
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-0 rtl:right-0"
      />
    </span>
  </button>,
]
`;

exports[`Switch in Dark Theme renders Form 1`] = `
<form
  action="/notification-settings"
  method="post"
>
  <input
    checked={true}
    hidden={true}
    name="notification"
    readOnly={true}
    style={
      Object {
        "borderWidth": "0",
        "clip": "rect(0, 0, 0, 0)",
        "display": "none",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
    type="checkbox"
    value="on"
  />
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    id="headlessui-switch-:ri:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
</form>
`;

exports[`Switch in Dark Theme renders Sizes 1`] = `
Array [
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-8 h-4 p-0.5 bg-piccolo"
    id="headlessui-switch-:rd:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-3 h-3 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-11 h-6 p-1 bg-piccolo"
    id="headlessui-switch-:re:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-4 h-4 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    id="headlessui-switch-:rf:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
]
`;

exports[`Switch in Dark Theme renders WithIcons 1`] = `
Array [
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-8 h-4 p-0.5 bg-piccolo"
    id="headlessui-switch-:rl:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-12"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-12"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-3 h-3 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-11 h-6 p-1 bg-piccolo"
    id="headlessui-switch-:rm:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-16"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-16"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-4 h-4 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    id="headlessui-switch-:rn:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-24"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-24"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
]
`;

exports[`Switch in Light Theme renders CustomBg 1`] = `
Array [
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-chiChi"
    id="headlessui-switch-:r4:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-roshi"
    id="headlessui-switch-:r5:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
]
`;

exports[`Switch in Light Theme renders Default 1`] = `
<button
  aria-checked={true}
  className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
  data-tests="test-id"
  id="headlessui-switch-:r0:"
  onClick={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  role="switch"
  tabIndex={0}
  type="button"
>
  <span
    className="block relative"
  >
    <span
      aria-hidden="true"
      className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
    />
  </span>
</button>
`;

exports[`Switch in Light Theme renders Disabled 1`] = `
Array [
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo opacity-30 cursor-not-allowed select-none"
    disabled={true}
    id="headlessui-switch-:r7:"
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={false}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-beerus opacity-30 cursor-not-allowed select-none"
    disabled={true}
    id="headlessui-switch-:r8:"
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-0 rtl:right-0"
      />
    </span>
  </button>,
]
`;

exports[`Switch in Light Theme renders Form 1`] = `
<form
  action="/notification-settings"
  method="post"
>
  <input
    checked={true}
    hidden={true}
    name="notification"
    readOnly={true}
    style={
      Object {
        "borderWidth": "0",
        "clip": "rect(0, 0, 0, 0)",
        "display": "none",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
    type="checkbox"
    value="on"
  />
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    id="headlessui-switch-:r6:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
</form>
`;

exports[`Switch in Light Theme renders Sizes 1`] = `
Array [
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-8 h-4 p-0.5 bg-piccolo"
    id="headlessui-switch-:r1:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-3 h-3 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-11 h-6 p-1 bg-piccolo"
    id="headlessui-switch-:r2:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-4 h-4 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    id="headlessui-switch-:r3:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
]
`;

exports[`Switch in Light Theme renders WithIcons 1`] = `
Array [
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-8 h-4 p-0.5 bg-piccolo"
    id="headlessui-switch-:r9:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-12"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-12"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-3 h-3 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-11 h-6 p-1 bg-piccolo"
    id="headlessui-switch-:ra:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-16"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-16"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-4 h-4 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    id="headlessui-switch-:rb:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-24"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-24"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>,
]
`;

exports[`Switch in RTL renders CustomBg 1`] = `
<div
  dir="rtl"
>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-chiChi"
    id="headlessui-switch-:rs:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-roshi"
    id="headlessui-switch-:rt:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
</div>
`;

exports[`Switch in RTL renders Default 1`] = `
<div
  dir="rtl"
>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    data-tests="test-id"
    id="headlessui-switch-:ro:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
</div>
`;

exports[`Switch in RTL renders Disabled 1`] = `
<div
  dir="rtl"
>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo opacity-30 cursor-not-allowed select-none"
    disabled={true}
    id="headlessui-switch-:rv:"
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
  <button
    aria-checked={false}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-beerus opacity-30 cursor-not-allowed select-none"
    disabled={true}
    id="headlessui-switch-:r10:"
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-0 rtl:right-0"
      />
    </span>
  </button>
</div>
`;

exports[`Switch in RTL renders Form 1`] = `
<div
  dir="rtl"
>
  <form
    action="/notification-settings"
    method="post"
  >
    <input
      checked={true}
      hidden={true}
      name="notification"
      readOnly={true}
      style={
        Object {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "display": "none",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      type="checkbox"
      value="on"
    />
    <button
      aria-checked={true}
      className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
      id="headlessui-switch-:ru:"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
      type="button"
    >
      <span
        className="block relative"
      >
        <span
          aria-hidden="true"
          className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
        />
      </span>
    </button>
  </form>
</div>
`;

exports[`Switch in RTL renders Sizes 1`] = `
<div
  dir="rtl"
>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-8 h-4 p-0.5 bg-piccolo"
    id="headlessui-switch-:rp:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-3 h-3 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-11 h-6 p-1 bg-piccolo"
    id="headlessui-switch-:rq:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-4 h-4 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    id="headlessui-switch-:rr:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
</div>
`;

exports[`Switch in RTL renders WithIcons 1`] = `
<div
  dir="rtl"
>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-8 h-4 p-0.5 bg-piccolo"
    id="headlessui-switch-:r11:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-12"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-12"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-3 h-3 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-11 h-6 p-1 bg-piccolo"
    id="headlessui-switch-:r12:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-16"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-16"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-4 h-4 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
  <button
    aria-checked={true}
    className="block relative isolate cursor-pointer rounded-full transition focus:outline-none w-[3.75rem] h-8 p-1 bg-piccolo"
    id="headlessui-switch-:r13:"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <span
      className="block relative"
    >
      <span
        className="z-1 absolute ltr:left-0 rtl:right-0 top-1/2 -translate-y-1/2 transition-opacity opacity-100"
      >
        <svg
          className="text-goten text-moon-24"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M11 15l4 4.5 5.222-6.667"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      <span
        className="z-1 absolute ltr:right-0 rtl:left-0 top-1/2 -translate-y-1/2 transition-opacity opacity-0"
      >
        <svg
          className="text-bulma text-moon-24"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M25 16a9 9 0 01-9 9v1c5.523 0 10-4.477 10-10h-1zm-9 9a9 9 0 01-9-9H6c0 5.523 4.477 10 10 10v-1zm-9-9a9 9 0 019-9V6C10.477 6 6 10.477 6 16h1zm9-9a9 9 0 019 9h1c0-5.523-4.477-10-10-10v1zM20.053 12.7a.5.5 0 00-.707-.707l.707.707zm-8.106 6.691a.5.5 0 10.707.707l-.707-.707zm7.399.707a.5.5 0 10.707-.707l-.707.707zm-6.692-8.105a.5.5 0 00-.707.707l.707-.707zm6.692 0l-3.7 3.699.708.707 3.699-3.7-.707-.706zm-3.7 3.699l-3.699 3.7.707.706 3.7-3.699-.707-.707zm4.407 3.7l-3.7-3.7-.707.707 3.7 3.7.707-.708zm-3.7-3.7l-3.699-3.7-.707.708 3.7 3.699.707-.707z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        className="z-5 absolute top-1/2 -translate-y-1/2 shadow-moon-sm pointer-events-none rounded-full bg-goten transition-all w-6 h-6 ltr:left-full rtl:right-full ltr:-translate-x-full rtl:translate-x-full"
      />
    </span>
  </button>
</div>
`;
